<resources>
    <string name="app_name">Kadrovska NFC</string>
    <string name="nfcNSupported">This device does not support NFC.</string>
    <string name="nfcNEnabled">The NFC is not enabled.</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="enable">Enable</string>
    <string name="generateImage">Generate image</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Clear database</string>
    <string name="open_nav">Open</string>
    <string name="close_nav">Close</string>
    <string name="FOI">Faculty of organization and informatics</string>
    <string name="info">Info</string>
    <string name="empty_rw">To show data please click the refresh button in the navigation bar.</string>
    <string name="filter">Filter</string>
    <string name="filter_by">Filter by:</string>
    <string-array name="filter_options">
        <item>Name</item>
        <item>Last name</item>
        <item>Title</item>
    </string-array>
    <string name="filter_type">Filter type:</string>
    <string-array name="filter_types">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="eng">English</string>
    <string name="cro">Croatian</string>
    <string name="author">Author:</string>
    <string name="author_name">Andrej Antonić</string>
    <string name="mentor">Mentor:</string>
    <string name="mentor_name">Doc. dr. sc. Boris Tomaš</string>
    <string name="coevaluator">Co-evaluator</string>
    <string name="coevaluator_name">Prof. dr. sc. Ivan Magdalenić</string>
    <string name="organization">Organization:</string>
    <string name="title">Title of work:</string>
    <string name="title_text">Smart display for data visualization using e-ink technology</string>
    <string name="description">Description:</string>
    <string name="description_text">It is necessary to create a smart screen (e-ink) that displays data from the FOI system of personnel records. The solution should be energy efficient, so it is necessary to analyze energy collection and storage techniques.</string>
    <string name="study">Study:</string>
    <string name="study_name">Information/Business systems</string>
    <string name="instructions">Instructions:</string>
    <string name="instructions_step1">1. After you open the app if there is no data open navigation bar and click refresh.</string>
    <string name="instructions_step2">2. Select the names you want to generate an image for. You can select up to 4 names.</string>
    <string name="instructions_step3">3. Click checkmark in the bottom right part of the screen.</string>
    <string name="instructions_step4">4. Generated image opens up. You can go back or send the image by NFC.</string>
    <string name="instructions_step5">5. Put your mobile phone close to the E-paper display.</string>
    <string name="instructions_step6">6. After some time the display should update and show the new image.</string>
    <string name="forceDark">Force dark mode</string>
    <string name="language">Application language</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="deleteQuestion">Are you sure you want to clear the database?</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="nfcAlertTitle">NFC is not enabled</string>
    <string name="nfcAlertMessage">Would you like to enable it?</string>
    <string name="employeeSelected">Please select and emplyee first!</string>
</resources>