<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:id="@+id/menuHome"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/baseline_home_24_black"
            android:title="@string/home"/>

        <item
            android:id="@+id/refresh"
            android:icon="@drawable/baseline_refresh_24_black"
            android:title="@string/refresh"/>

        <item
            android:id="@+id/clearDatabase"
            android:icon="@drawable/baseline_delete_24_black"
            android:title="@string/delete"/>
    </group>

    <group
        android:id="@+id/menuSettings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/baseline_settings_24_black"
            android:title="@string/settings"/>
    </group>


    <group
        android:id="@+id/menuInfo"
        android:checkableBehavior="single">
        <item
            android:id="@+id/info"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/info"/>
    </group>

</menu>