<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/nfcNEnabled"
            android:gravity="center"
            android:id="@+id/tw_nfcNEnabled"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_nfcNEnabledClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/close"
                android:textColor="@color/black" />

            <Button
                android:text="@string/enable"
                android:gravity="center"
                android:id="@+id/btn_nfcNEnabledEnable"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>